# XS4GCR

./: .clang-format  .codedocs  .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
data/: Evoli2019_fragmentation_fitparams.txt  betadecays_list.txt  crchart_Z28.txt  crchart_Z28_2020.txt  ghost_list.txt  isotope_decays.txt  xsecs_data_GALPROP.txt  xsecs_data_full.txt
doxygen/: Doxyfile.in  README.md  mainpage.dox
examples/: C12frag.cpp  D2-table.cpp  decay.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  frag-table.cpp  frag_table.cpp  inelastic.cpp  sandbox.cpp  secantiprotons.cpp  secleptons.cpp
include/: DiMauro2015.h  Duperray03.h  TanNg83.h  Tripathi99.h  Webber2003_table.h  antiproton_tables.h  antiprotons.h  axis.h  d2xsec.h  decay.h  grid.h  inelastic.h  interpolator.h  leptons.h  lis.h  mks.h  nucleiname.h  pid.h  protons.h  spallation.h  utilities.h
include/XS4GCR/: axis.h  cgs.h  cr_chart.h  decay.h  grid.h  lis.h  mks.h  nucleinames.h  particlenames.h  pid.h  protons.h  utilities.h  xs4gcr.h
include/XS4GCR/antiprotons/: DiMauro2015.h  Duperray03.h  TanNg83.h  antiproton_tables.h  antiprotons.h
include/XS4GCR/inelastic/: CROSEC.h  Letaw1983.h  Tripathi99.h  inelastic.h
include/XS4GCR/leptons/: leptons.h
include/XS4GCR/spallation/: Evoli2018.h  Evoli2019.h  Webber1993.h  Webber2003_table.h  fit_data.h  fitting_functions.h  ghost_tree.h  spallation.h
include/antiprotons/: antiproton_tables.h
include/inelastic/: inelastic.h
include/leptons/: leptons.h
include/spallation/: Evoli2018.h  Evoli2018_table.h  Webber2003_table.h  fit_data.h  fitting_functions.h  ghost_tree.h  spallation.h
libs/cparamlib/: CMakeLists.txt
libs/cparamlib/examples/: example1.c  example2.c  spectrum.c
libs/cparamlib/src/: elec.c  gamma.c
libs/external_codes/: CMakeLists.txt  crosec94.f  webber93.f
src/: DiMauro2015.cpp  Duperray03.cpp  TanNg83.cpp  Tripathi99.cpp  Webber2003_table.cpp  antiproton_tables.cpp  antiprotons.cpp  cr_chart.cpp  d2xsec.cpp  decay.cpp  ghost_tree.cpp  grid.cpp  inelastic.cpp  leptons.cpp  protons.cpp  spallation.cpp  utilities.cpp  xs4gcr.cpp
src/antiprotons/: DiMauro2015.cpp  Duperray03.cpp  TanNg83.cpp  antiproton_tables.cpp  antiprotons.cpp
src/inelastic/: CROSEC.cpp  Letaw1983.cpp  Tripathi99.cpp  inelastic.cpp
src/leptons/: leptons.cpp
src/spallation/: Evoli2018.cpp  Evoli2018_table.cpp  Evoli2019.cpp  Webber1993.cpp  Webber2003_table.cpp  fitting_functions.cpp  ghost_tree.cpp  spallation.cpp
